Display works section dynamically using JS.
-Delete works section content in html file.
-Created the html code in JS.

--- a/style.css
+++ b/style.css
@@ -269,9 +269,7 @@ h2 {
   color: #fff;
 }
 
-.html,
-.ruby,
-.js {
+.tags {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 300;
