Setting up validation form for the email.
-Added message error.
-Added the script for this message.

--- a/style.css
+++ b/style.css
@@ -954,6 +954,15 @@ textarea:hover {
   color: #1a2236;
 }
 
+#error-message {
+  display: none;
+  text-align: center;
+  color: #e2505c;
+  font-size: 14px;
+  margin-top: -50px;
+  margin-bottom: 29px;
+}
+
 /* Contact-form Desktop Section CSS */
 
 @media (min-width: 768px) {
@@ -1032,6 +1041,11 @@ textarea:hover {
   .contact-button {
     width: 254px;
     height: 70px;
+  }
+
+  #error-message {
+    margin-top: -110px;
+    margin-bottom: 89px;
   }
 }
 
