Add to do list project

--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ h2 {
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
-    background-image: url(img/project1.png);
+    background-image: url(img/to-do-list/to-do-list1.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
